compiler/tests/should-pass/plaintext-code-generation/ControlFlow.via
host alice : {A}

process main {
    val a: bool = input bool from alice;

    /* If with no branches. */
    if (a) {}

    /* If with a single branch. */
    if (a) {
        output a to alice;
    }

    /* If with both branches. */
    if (a) {
        output 1 to alice;
    } else {
        output 0 to alice;
    }
}
