compiler/tests/should-fail/InsecureControlFlowConfidentiality.via
/* InsecureControlFlowError */

fun main() {
    val secret: bool{(a ∧ b)->} = true;
    if (secret) {
        val public: int{a->} = 42;
    }
}

host a
host b
